--- a/Module1/bien_kieu_du_lieu_va_toan_tu/bai_tap/bien_kieu_du_lieu-va-toan_tu/ex4.html
+++ b/Module1/bien_kieu_du_lieu_va_toan_tu/bai_tap/bien_kieu_du_lieu-va-toan_tu/ex4.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MAI VĂN ĐẠT</title>
+    <title>CHU VI HÌNH TRÒN </title>
 </head>
 <body>
 
-
 </body>
 </html>
-<script src="ex1.js">
-
-</script>
+<script src="ex4.js"></script>
