--- a/Module1/bien_kieu_du_lieu_va_toan_tu/bai_tap/ung-dung-may-tinh/computer.html
+++ b/Module1/bien_kieu_du_lieu_va_toan_tu/bai_tap/ung-dung-may-tinh/computer.html
@@ -3,12 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
-    <style>
-        .value
-        {
-            width: 180px;
-        }
-    </style>
 </head>
 <body>
 <form>
@@ -16,42 +10,38 @@
     <input type="text" id="value1" >
     <input type="text" id="value2">
     <br>
-    <button type="button" id="cong" name="add" onclick="Cong()">Addition(+)</button>
-    <button type="button" id="tru" name="sub" onclick="Tru()">Subtraction(-)</button>
-    <button type="button" id="nhan" name="multi" onclick="Nhan()">Multiplication(X)</button>
-    <button type="button" id="chia" name="division" onclick="Chia()">Division(/)</button>
+    <input type="button"; value="Addition(+)"; onclick="add()">
+    <input type="button"; value="Subtraction(-)"; onclick="sub()">
+    <input type="button"; value="Multiplication(X)"; onclick="mul()">
+    <input type="button"; value="Division(\)"; onclick="div()">
 </form>
 <p id="result"></p>
 <script>
-    function Cong() {
+    function add() {
         let a = document.getElementById('value1').value;
         let b = document.getElementById('value2').value;
-        let c;
-        c = parseInt(a) + parseInt(b);
+        // let c = parseInt(a) + parseInt(b);
+        let c = a+b;
         document.getElementById('result').innerHTML = 'Result addition:' + c;
     }
-    function Tru() {
+    function sub() {
         let a = document.getElementById('value1').value;
         let b = document.getElementById('value2').value;
-        let c;
-        c = parseInt(a) - parseInt(b);
+        let c = parseInt(a) - parseInt(b);
         document.getElementById('result').innerHTML = 'Result subtraction: ' + c;
     }
-    function Nhan() {
+    function mul() {
         let a = document.getElementById('value1').value;
         let b = document.getElementById('value2').value;
-        let c;
-        c = parseInt(a) * parseInt(b);
+        let c = parseInt(a) * parseInt(b);
         document.getElementById('result').innerHTML = 'Result multiplication: ' + c;
     }
-    function Chia() {
+    function div() {
         let a = document.getElementById('value1').value;
         let b = document.getElementById('value2').value;
-        let c;
-        c = parseInt(a) / parseInt(b);
+        let c = parseInt(a) / parseInt(b);
         document.getElementById('result').innerHTML = 'Result division: ' + c;
     }
-
 </script>
 </body>
 </html>
