--- a/Module1/git_html/bai_tap/tao_trang_cv_ca_nhan/CV_ca_nha.html
+++ b/Module1/git_html/bai_tap/tao_trang_cv_ca_nhan/CV_ca_nha.html
@@ -5,7 +5,7 @@
     <title>CV Mai Văn Đạt</title>
 </head>
 <body>
-<img src="D:\anh\anh_the.jpg" alt="image icon" style="width:256px;height:256px;" float="letf">
+<img src="D:anh\anh_the.jpg" alt="image icon" style="width:256px;height:256px;" float="letf">
 <h1>Thông tin cá nhân</h1>
 <ul>
     <li>Họ và tên: Mai Văn Đạt</li>
