--- a/Module1/cauTrucLap2/baiTap/soNguyenTo/soNguyenTo.html
+++ b/Module1/cauTrucLap2/baiTap/soNguyenTo/soNguyenTo.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Số nguyên tố</title>
 </head>
 <body>
-$END$
+<script>
+    let number=parseInt(prompt('Enter a number: '));
+    while (num<=20) {
+        let check = true;
+        let count = 0;
+        for (let i = 2; i <= number; i++) {
+            if (number % 2 == 0) {
+                check = false;
+            }
+        }
+        num++;
+    }
+
+
+</script>
 </body>
 </html>
