--- a/Module1/cauTrucLap2/baiTap/luyenTapVongLap01/bai1.html
+++ b/Module1/cauTrucLap2/baiTap/luyenTapVongLap01/bai1.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    for(let i=1;i<=100;i++){
+        console.log(i);
+        if(i==99){
+          console.log('Đã hoàn thành!');
+        }
+    }
+</script>
+
 </body>
 </html>
