--- a/Module1/cauTrucLap2/baiTap/luyenTapVongLap01/bai2.html
+++ b/Module1/cauTrucLap2/baiTap/luyenTapVongLap01/bai2.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let nhietDo=prompt('Nhiệt độ hiện tại: ');
+    if(nhietDo>100){
+        alert('Vui lòng giảm nhiệt độ');
+    } else if(nhietDo<20){
+        alert('Vui lòng tăng nhiệt độ');
+    }
+</script>
+
 </body>
 </html>
