--- a/Module1/cauTrucLap2/baiTap/luyenTapVongLap01/bai3.html
+++ b/Module1/cauTrucLap2/baiTap/luyenTapVongLap01/bai3.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+//0 1 2 3 5 8 13
+<script>
+    let a=0;
+    let b=1;
+    let string=
+</script>
 </body>
 </html>
