--- a/Module1/cauTrucLap2/baiTap/luyenTapVongLap01/bai4.html
+++ b/Module1/cauTrucLap2/baiTap/luyenTapVongLap01/bai4.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    // 0 1 1 2 3 5 8
+    let num=parseInt(prompt("Enter a number: "));
+    let a =0;
+    let b=1;
+    let c="";
+    let string = a+"<br>"+b+"<br>";
+    for (let i=0; i<=num;i++){
+        c=a+b;
+        string += c+"<br>";
+        a=b;
+        b=c;
+        num++;
+        if(num%5==0){
+            alert(num);
+        }
+    }
+    // document.write(string);
+</script>
 </body>
 </html>
