--- a/Module1/cauTrucLap2/baiTap/soNguyenTo/soNguyenTo.html
+++ b/Module1/cauTrucLap2/baiTap/soNguyenTo/soNguyenTo.html
@@ -7,6 +7,7 @@
 <body>
 <script>
     let number=parseInt(prompt('Enter a number: '));
+    let num = 0;
     while (num<=20) {
         let check = true;
         let count = 0;
