--- a/Module1/array/baiTap/suDungCacHamCoSanCuaMang/bai2.html
+++ b/Module1/array/baiTap/suDungCacHamCoSanCuaMang/bai2.html
@@ -22,7 +22,7 @@
             result.push(str[x]);
         }
     }
-    console.log(result.join(''));
+    console.log(result.join(""));
 </script>
 </body>
 </html>
