--- a/Module1/array/baiTap/suDungCacHamCoSanCuaMang/bai3.html
+++ b/Module1/array/baiTap/suDungCacHamCoSanCuaMang/bai3.html
@@ -10,7 +10,8 @@
     // và chuyển các ký tự chữ thường trong chuỗi vừa nhập sang thành dạng chữ hoa.
     // Ví dụ: nếu bạn nhập vào chuỗi 'The Quick Brown Fox' kết quả của chương trình
     // là 'tHE qUICK bROWN fOX'.
-    let str = 'c';
+    // let str = 'c';
+    let str=prompt("Nhap chuoi:" );
     let UPPER = 'ABCDEFGHỊKMNOPQ';
     let LOWER = 'abcdefghijklmnopqrstuvwxyz';
     let result = [];
