--- a/Module1/function/baiTap/ungDungQuanLySanPham/Ứng dụng quản lý sản phẩm.html
+++ b/Module1/function/baiTap/ungDungQuanLySanPham/Ứng dụng quản lý sản phẩm.html
@@ -14,11 +14,10 @@
     hienThi();
 ​
     function hienThi() {
-        let bangChuoi = '<table border="1">\n' +
-            '    <tr>\n' +
+        let bangChuoi = '<table border="1">\n '+'    <tr>\n' +
             '        <th>STT</th>\n' +
             '        <th>Tên Sản phẩm</th>\n' +
-            '        <th> sửa</th>\n' +
+            '        <th>sửa</th>\n' +
             '        <th>Xóa</th>\n' +
             '    </tr>';
         for (let i = 0; i < array.length; i++) {
